--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -917,7 +917,8 @@
                             right: 0;
                             width: 13px;
                             height: 18px;
-                            background: url(../images/content/icon-arrow-contact.png)
+                            background: 
+                                url(../images/content/link-made.png)
                                 no-repeat 50% / cover;
                         }
                         &::after {
