--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -285,6 +285,7 @@
 
                     .link-modern {
                         position: relative;
+                        display: block;
 
                         .text-box {
                             position: absolute;
